--- a/app/src/main/res/layout/player_record.xml
+++ b/app/src/main/res/layout/player_record.xml
@@ -12,7 +12,6 @@
         android:id="@+id/player_MTV_index"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/start_button_margin"
         android:textSize="@dimen/small_text_size"
         android:layout_marginTop="@dimen/small_margin_default"
         android:textColor="@color/black"
@@ -22,7 +21,7 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/player_MTV_name"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/main_frame_size"
         android:layout_height="wrap_content"
         android:layout_alignStart="@id/player_MTV_index"
         android:layout_marginStart="@dimen/small_margin_default"
@@ -30,14 +29,17 @@
         android:textSize="@dimen/small_text_size"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:minLines="2"
+        android:maxLines="2"
         android:text="@string/name_edit" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/player_MTV_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@id/player_MTV_name"
-        android:layout_marginStart="@dimen/score_txt_margin_start"
+
+        android:layout_toEndOf="@id/player_MTV_name"
+        android:layout_marginStart="@dimen/small_margin_default"
         android:layout_marginTop="@dimen/small_margin_default"
         android:textSize="@dimen/small_text_size"
         android:textStyle="bold"
@@ -50,7 +52,6 @@
         android:layout_height="@dimen/small_margin_default"
         android:layout_marginTop="@dimen/map_image_margin_top"
         android:scaleType="centerCrop"
-        android:layout_marginStart="@dimen/big_margin_default"
-        android:layout_alignStart="@id/player_MTV_score"
+        android:layout_alignParentEnd="true"
         android:src="@drawable/map" />
 </RelativeLayout>
