--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -13,15 +13,12 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         >
-
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/list_IMG_background"
+            android:id="@+id/frameList_IMG_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:alpha="0.4"
-            android:scaleType="centerCrop"
-            tools:srcCompat="@drawable/bg"/>
-
+            />
 
     </FrameLayout>
 <!--    MARK: MAP_FRAME-->
@@ -66,5 +63,6 @@
             android:textStyle="bold"
             android:textSize="@dimen/text_size" />
     </RelativeLayout>
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
