--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -24,7 +24,8 @@
         android:layout_height="match_parent"
        android:layout_below="@id/record_MTV_main_title"
         android:layout_marginTop="@dimen/small_margin_default"
-        android:layout_marginStart="@dimen/big_margin_default"
+        android:layout_marginStart="@dimen/small_margin_default"
+        android:layout_marginEnd="@dimen/small_margin_default"
         android:layout_centerHorizontal="true"
         tools:listitem="@layout/player_record"
         />
