--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -21,9 +21,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_RECYCLER_itemList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-       android:layout_below="@id/record_MTV_main_title"
-        android:layout_marginTop="@dimen/small_margin_default"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/record_MTV_main_title"
+        android:layout_marginBottom="@dimen/big_margin_default"
         android:layout_marginStart="@dimen/small_margin_default"
         android:layout_marginEnd="@dimen/small_margin_default"
         android:layout_centerHorizontal="true"
