--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -17,6 +17,7 @@
             android:id="@+id/frameList_IMG_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:alpha="0.4"
             />
 
