--- a/app/src/main/res/layout/player_record.xml
+++ b/app/src/main/res/layout/player_record.xml
@@ -4,51 +4,50 @@
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
-    android:orientation="horizontal"
-    >
+    android:orientation="horizontal">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/player_MTV_index"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/big_margin_default"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/small_text_size"
         android:layout_marginTop="@dimen/small_margin_default"
+        android:text="1."
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:text="1." />
+        android:textSize="@dimen/small_text_size"
+        android:textStyle="bold" />
 
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/player_MTV_name"
         android:layout_width="@dimen/main_frame_size"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@id/player_MTV_index"
         android:layout_marginStart="@dimen/small_margin_default"
         android:layout_marginTop="@dimen/small_margin_default"
-        android:textSize="@dimen/small_text_size"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:minLines="2"
+        android:layout_toEndOf="@id/player_MTV_index"
         android:maxLines="2"
-        android:text="@string/name_edit" />
+        android:minLines="2"
+        android:text="@string/name_edit"
+        android:textColor="@color/black"
+        android:textSize="@dimen/small_text_size"
+        android:textStyle="bold" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/player_MTV_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/player_MTV_name"
         android:layout_marginStart="@dimen/small_margin_default"
         android:layout_marginTop="@dimen/small_margin_default"
-        android:textSize="@dimen/small_text_size"
-        android:textStyle="bold"
+        android:layout_toEndOf="@id/player_MTV_name"
+        android:text="@string/score_title"
         android:textColor="@color/black"
-        android:text="@string/score_title" />
+        android:textSize="@dimen/small_text_size"
+        android:textStyle="bold" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/player_IMG_playerMap"
         android:layout_width="@dimen/big_margin_default"
         android:layout_height="@dimen/big_margin_default"
-        android:scaleType="centerCrop"
         android:layout_alignParentEnd="true"
+        android:scaleType="centerCrop"
         android:src="@drawable/map" />
 </RelativeLayout>
