--- a/app/src/main/res/layout/player_record.xml
+++ b/app/src/main/res/layout/player_record.xml
@@ -35,9 +35,9 @@
         android:id="@+id/player_MTV_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_margin_default"
+        android:layout_marginEnd="@dimen/big_margin_default"
         android:layout_marginTop="@dimen/small_margin_default"
-        android:layout_toEndOf="@id/player_MTV_name"
+        android:layout_toStartOf="@id/player_IMG_playerMap"
         android:text="@string/score_title"
         android:textColor="@color/black"
         android:textSize="@dimen/small_text_size"
