--- a/app/src/main/res/layout/player_record.xml
+++ b/app/src/main/res/layout/player_record.xml
@@ -11,7 +11,7 @@
         android:layout_width="@dimen/big_margin_default"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/small_margin_default"
-        android:text="1."
+        android:text="@string/_1"
         android:textColor="@color/black"
         android:textSize="@dimen/small_text_size"
         android:textStyle="bold" />
